# vtt

./: .gitignore  .gitmodules  .justfile  CMakeLists.txt  README.md  stream.cpp  vtt.cpp  write.cpp
src/: Keyboard.cpp  Keyboard.h  Keyboard.tests.cpp  Transcription.h  TranscriptionSegment.cpp  TranscriptionSegment.h  TranscriptionSegment.tests.cpp  UnicodeString.cpp  UnicodeString.h  UnicodeString.tests.cpp  test_common.cpp  test_common.h  type_input.cpp  type_input.h  type_input.tests.cpp
